// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message close demo works fine 1`] = `
<div
  class="t-demo-message"
>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     点击关闭按钮触发事件 click-close-btn 
    
    <span
      class="t-message-close"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fillOpacity="0.9"
        />
      </svg>
    </span>
  </div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     自定义关闭按钮（文字） 
    
    <span
      class="t-message-close"
    >
      关闭
    </span>
  </div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     自定义关闭按钮（函数） 
    
    <span
      class="t-message-close"
    >
      <div
        class="t-message-close"
      >
        <b>
          x
        </b>
      </div>
    </span>
  </div>
  <div
    class="t-message t-is-info t-is-closable"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     自定义关闭按钮（插槽） 
    
    <span
      class="t-message-close"
    >
      
      <div
        class="t-message-close"
      >
        <b>
          x
        </b>
      </div>
      
    </span>
  </div>
</div>
`;

exports[`Message closeAll demo works fine 1`] = `
<div>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       点击打开多个消息 
      
    </span>
  </button>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    id="t-demo-msg-close-all"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       点击关闭所有消息 
      
    </span>
  </button>
</div>
`;

exports[`Message offset demo works fine 1`] = `
<div>
  <p>
    偏移量 offset 是相对于 placement 的偏移量，默认值：空，参数示例：{left, top, bottom, right}。
  </p>
  <br />
  <button
    class="t-button t-size-m t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       带 offset 信息位置 
      
    </span>
  </button>
</div>
`;

exports[`Message placement demo works fine 1`] = `
<div>
  <div
    class="t-message-offset"
  >
    <div
      class="t-input t-size-m"
      modelvalue=""
    >
      <!---->
      <input
        autocomplete="false"
        class="t-input__inner"
        placeholder="请输入横向偏移量"
        type="text"
      />
      <!---->
    </div>
    <div
      class="t-input t-size-m"
      modelvalue=""
    >
      <!---->
      <input
        autocomplete="false"
        class="t-input__inner"
        placeholder="请输入纵向偏移量"
        type="text"
      />
      <!---->
    </div>
  </div>
  <div
    class="tdesign-tooltip-placement"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-center"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         center 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-top"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-left"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         left 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-right"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         right 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-bottom"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-top-left"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-left 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-top-right"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         top-right 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-bottom-left"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-left 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default placement-bottom-right"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         bottom-right 
        
      </span>
    </button>
  </div>
</div>
`;

exports[`Message plugin demo works fine 1`] = `
<div>
  <p>
    插件调用
  </p>
  <br />
  <div
    class="t-demo-message-duration"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         消息 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         成功 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         警示 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         失败 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         询问 
        
      </span>
    </button>
    <!-- 0 表示永远不自动消失 -->
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         加载中 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         关闭所有 
        
      </span>
    </button>
  </div>
  <br />
  <br />
  <p>
    函数式调用
  </p>
  <br />
  <div
    class="t-demo-message-theme"
  >
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         消息 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-success"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         成功 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-warning"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         警示 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-danger"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         失败 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         询问 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         加载中 
        
      </span>
    </button>
    <button
      class="t-button t-size-m t-button--variant-outline t-button--theme-default"
      type="button"
    >
      <span
        class="t-button__text"
      >
        
         关闭所有 
        
      </span>
    </button>
  </div>
  <br />
  <br />
</div>
`;

exports[`Message toggle demo works fine 1`] = `
<div
  id="t-demo-message-toggle"
>
  <button
    class="t-button t-size-m t-button--variant-outline t-button--theme-default"
    type="button"
  >
    <span
      class="t-button__text"
    >
      
       自由控制关闭时机（打开） 
      
    </span>
  </button>
</div>
`;

exports[`Message type demo works fine 1`] = `
<div
  class="t-demo-message"
>
  <div
    class="t-message t-is-info"
  >
    <svg
      class="t-icon t-icon-info-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     用户表示普通操作信息提示 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
  <div
    class="t-message t-is-success"
  >
    <svg
      class="t-icon t-icon-check-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     用户表示操作顺利达成 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
  <div
    class="t-message t-is-warning"
  >
    <svg
      class="t-icon t-icon-error-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     用户表示操作引起一定后果 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
  <div
    class="t-message t-is-error"
  >
    <svg
      class="t-icon t-icon-error-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     用户表示操作引起严重的后果 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
  <div
    class="t-message t-is-question"
  >
    <svg
      class="t-icon t-icon-help-circle-filled"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M15 8A7 7 0 101 8a7 7 0 0014 0zM5.8 6.63a2.2 2.2 0 014.39 0c0 .97-.75 1.72-1.49 2.02a.34.34 0 00-.2.32v.8h-1v-.8c0-.56.33-1.04.82-1.24.5-.2.87-.66.87-1.1a1.2 1.2 0 00-2.39 0h-1zm1.67 4.54a.53.53 0 111.05 0 .53.53 0 01-1.05 0z"
        fill="currentColor"
        fillOpacity="0.9"
      />
    </svg>
    
     用于帮助用户操作的信息提示 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
  <div
    class="t-message t-is-loading"
  >
    <div
      class="t-loading t-size-m t-loading-mask t-loading-lock v-transfer-dom"
    >
      <svg
        class="t-loading__gradient t-icon-loading"
        height="1em"
        size="medium"
        version="1.1"
        viewBox="0 0 14 14"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <foreignobject
          height="12"
          width="12"
          x="1"
          y="1"
        >
          <div
            class="t-loading__gradient-conic"
          />
        </foreignobject>
      </svg>
      <!---->
    </div>
    
     用于表示操作正在生效的过程中 
    
    <span
      class="t-message-close"
    >
      <!---->
    </span>
  </div>
</div>
`;
